--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <title>Expresiones regulares - Regex</title>
+    <meta name="description" content="Turn complex into simple: create, test and learn all about JavaScript regular expressions in one place" id="description">
+    <title id="title">Regular Expressions - Regex</title>
     <link rel="shortcut icon" href="./img/isotipo.svg" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -42,14 +42,20 @@
         <header class="w-full fixed top-0 flex items-center justify-between p-5 py-6 md:p-8 md:px-16">
             <a href="./index.html" class="w-fit h-fit"><img class="min-w-20 w-24 md:w-28" src="./img/logo-gray.svg" alt="Logo de Regex, herramienta para crear expresiones regulares de Java Script"></a>
             <div class="flex items-center justify-center gap-3 sm:gap-4 md:gap-5 2xl:gap-6">
-                <button type="button" id="btn-theme" class="w-fit bg-inherit transition duration-200 text-gray-600 hover:text-zinc-950 dark:text-gray-400 dark:hover:text-white">
+                <button type="button" id="btnTheme" class="w-fit bg-inherit transition duration-200 text-gray-600 hover:text-zinc-950 dark:text-gray-400 dark:hover:text-white">
                     <svg xmlns="http://www.w3.org/2000/svg"  width="26"  height="26"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.8"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-sun"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" /><path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7" /></svg>
                     <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.8"  stroke-linecap="round"  stroke-linejoin="round"  class="hidden icon icon-tabler icons-tabler-outline icon-tabler-moon"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z" /></svg>
                 </button>
 
-                <button type="button"  class="w-fit bg-inherit transition duration-200 text-gray-600 hover:text-zinc-950 dark:text-gray-400 dark:hover:text-white">
-                    <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.8"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-language"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 5h7" /><path d="M9 3v2c0 4.418 -2.239 8 -5 8" /><path d="M5 9c0 2.144 2.952 3.908 6.7 4" /><path d="M12 20l4 -9l4 9" /><path d="M19.1 18h-6.2" /></svg>
-                </button>
+                <div class="relative flex flex-col gap-4">
+                    <button type="button" id="btnLang" class="w-fit bg-inherit transition duration-200 text-gray-600 hover:text-zinc-950 dark:text-gray-400 dark:hover:text-white">
+                        <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.8"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-language"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 5h7" /><path d="M9 3v2c0 4.418 -2.239 8 -5 8" /><path d="M5 9c0 2.144 2.952 3.908 6.7 4" /><path d="M12 20l4 -9l4 9" /><path d="M19.1 18h-6.2" /></svg>
+                    </button>
+                    <div id="menuLang" class="hidden flex-col absolute top-8 right-0 py-2 bg-white rounded-lg border border-slate-200 shadow-lg dark:bg-zinc-900 dark:border-zinc-800 dark:shadow-black transition duration-100 ease-in">
+                        <button type="button" id="btnLangEn" class="active w-full flex items-center justify-between gap-4 px-5 py-1 text-sm text-left text-gray-800 bg-inherit cursor-pointer transition duration-100 ease-in hover:text-black hover:bg-zinc-100 dark:text-gray-300 dark:hover:text-white dark:hover:bg-zinc-800">English</button>
+                        <button type="button" id="btnLangEs" class="w-full flex items-center justify-between gap-4 px-5 py-1 text-sm text-left text-gray-800 bg-inherit cursor-pointer transition duration-100 ease-in hover:text-black hover:bg-zinc-100 dark:text-gray-300 dark:hover:text-white dark:hover:bg-zinc-800">Spanish</button>
+                    </div>
+                </div>
 
                 <a href="https://github.com/code-fw/regex.github.io" target="_blank"  class="hidden sm:flex w-fit bg-inherit transition duration-200 text-gray-600 hover:text-zinc-950 dark:text-gray-400 dark:hover:text-white">
                     <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.8"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-github"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" /></svg>
