--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
                 },
                 fontFamily: {
                     'sans': ['Plus Jakarta Sans', 'Segoe UI', 'Arial', 'Helvetica', 'sans-serif'],
-                    'mono': ['Space Mono', 'monospace']
+                    'serif': ['Space Mono', 'Times New Roman', 'Times', 'serif'],
+                    'mono': ['DM Mono', 'Courier New', 'Courier', 'monospace']
                 }
             }
         }
     </script>
 </head>
 <body class="relative h-full w-full bg-white text-slate-950 dark:bg-zinc-950 dark:text-white">
-    <div class="absolute bottom-0 left-0 right-0 top-0 bg-[linear-gradient(to_right,#4f4f4f2e_1px,transparent_1px),linear-gradient(to_bottom,#4f4f4f2e_1px,transparent_1px)] bg-[size:14px_24px] [mask-image:radial-gradient(ellipse_80%_50%_at_50%_0%,#000_70%,transparent_110%)]">
+    <div class="min-h-screen max-h-fit absolute bottom-0 left-0 right-0 top-0 bg-[linear-gradient(to_right,#4f4f4f2e_1px,transparent_1px),linear-gradient(to_bottom,#4f4f4f2e_1px,transparent_1px)] bg-[size:14px_24px] [mask-image:radial-gradient(ellipse_80%_50%_at_50%_0%,#000_70%,transparent_300%)]">
         <header class="w-full fixed top-0 flex items-center justify-between p-5 py-6 md:p-8 md:px-16">
             <a href="./index.html" class="w-fit h-fit"><img class="min-w-20 w-24 md:w-28" src="./img/logo-gray.svg" alt="Logo de Regex, herramienta para crear expresiones regulares de Java Script"></a>
             <div class="flex items-center justify-center gap-3 sm:gap-4 md:gap-5 2xl:gap-6">
@@ -61,16 +62,49 @@
                     <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.8"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-github"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" /></svg>
                 </a>
 
-                <div class="flex items-center">
+                <a href="#" class="flex items-center">
                     <span class="relative inline-flex overflow-hidden rounded-full p-[1px]">
-                        <span class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] bg-[conic-gradient(from_90deg_at_50%_50%,#0d0d0c_0%,#fade2c_50%,#0d0d0c_100%)]"></span>
+                        <span class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] bg-[conic-gradient(from_90deg_at_50%_50%,transparent_0%,#fade2c_50%,transparent_100%)]"></span>
                         <div class="inline-flex items-center justify-center w-full px-3 py-1 text-sm text-amber-950 bg-amber-50 rounded-full cursor-pointer dark:bg-zinc-900 dark:text-white/80 backdrop-blur-3xl whitespace-nowrap">
                             Docs
                         </div>
                     </span>
-                </div>
+                </a>
             </div>
         </header>
+
+        <main class="w-full p-5 py-20 md:pt-24 md:px-16 lg:pt-28">
+            <div class="w-full mb-20 grid grid-cols-1 gap-9 sm:grid-cols-2 md:gap-10 lg:gap-12">
+                <div class="col-auto">
+                    <h1 id="h1Index"  class="mb-3 md:mb-5 text-5xl font-extrabold capitalize md:text-6xl lg:text-7xl 2xl:text-8xl">Simplified Regular Expressions</h1>
+                    <h2 id="h2Description" class="text-2xl font-semibold text-slate-900 md:text-2xl 2xl:text-3xl dark:text-zinc-300">Create, learn and test JavaScript regular expressions faster and simpler</h2>
+                </div>
+                <div class="col-auto flex flex-col justify-center">
+                    <h3 id="labelConsole" class="mb-3 text-sm text-zinc-500 uppercase font-bold">Enter a regular expression</h3>
+                    <div class="w-full">
+                        <div class="bg-zinc-100 p-2 px-3 rounded-t-lg  flex items-center justify-start gap-1.5 dark:bg-stone-950">
+                            <div class="w-3 h-3 rounded-full bg-red-600"></div>
+                            <div class="w-3 h-3 rounded-full bg-yellow-600"></div>
+                            <div class="w-3 h-3 rounded-full bg-green-600"></div>
+                        </div>
+                        <div class="w-full p-3 rounded-b-lg font-mono font-normal text-black text-xl bg-white/80 shadow-lg dark:text-white dark:bg-black/60 dark:shadow-black">
+                            /<div id="consola" spellcheck="false" autocorrect="off" autocapitalize="off" autofocus="true"
+                                    writingsuggestions="false" translate="no" contenteditable="true" role="textbox"
+                                    aria-multiline="true" data-languague="javascript"
+                                    class="min-w-12 inline font-mono border-0 outline-0">^[^\d]+$</div>/
+                        </div>
+                    </div>
+                    <h3 id="labelTest" class=" mt-8 mb-3 text-sm text-zinc-500 uppercase font-bold">Try the regular expression</h3>
+                    <div id="contentTest" class="w-full p-3 rounded-lg border-2 border-green-500 flex gap-3 items-center bg-white/80 shadow-lg outline-0 dark:text-white dark:bg-black/60 dark:shadow-black">
+                        <input type="text" id="test" value="This regular expression does not support number" class="flex-1 text-md text-black bg-transparent outline-0 dark:text-white"
+                                spellcheck="false" aria-describedby="Test regular expressions">
+                        <i id="iconTest" title="Write something for test" class="text-green-500">
+                            <svg  xmlns="http://www.w3.org/2000/svg"  width="20"  height="20"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.8"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-check"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 12l5 5l10 -10" /></svg>
+                        </i>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
 
     <script src="./js/script.js"></script>
