--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
                 </div>
             </div>
         </main>
+
+        <footer class="w-full mb-0 bottom-0 flex items-center justify-end px-5 py-4 md:p-8 md:py-4 md:px-16">
+            <b id="creator" class="font-mono italic">made by code-fw</b>
+        </footer>
     </div>
 
     <script src="./js/script.js"></script>
