add link to future collection

--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
                 <div class="col-auto">
                     <h1 id="h1Index"  class="mb-3 md:mb-5 text-5xl font-extrabold capitalize md:text-6xl lg:text-7xl 2xl:text-8xl">Simplified Regular Expressions</h1>
                     <h2 id="h2Description" class="text-2xl font-semibold text-slate-900 md:text-2xl 2xl:text-3xl dark:text-zinc-300">Create, learn and test JavaScript regular expressions faster and simpler</h2>
+                    <div class="mt-5 flex flex-wrap items-center justify-start gap-3">
+                        <a href="#" class="flex items-center order-1 md:order-2">
+                            <span class="relative inline-flex overflow-hidden rounded-full p-[1px]">
+                                <span class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] bg-[conic-gradient(from_90deg_at_50%_50%,transparent_0%,#020617_50%,transparent_100%)] dark:bg-[conic-gradient(from_90deg_at_50%_50%,transparent_0%,#ccc_50%,transparent_100%)]"></span>
+                                <div id="linkToCollection" class="inline-flex items-center justify-center w-full px-4 py-2 text-lg text-black font-medium bg-amber-50 rounded-full cursor-pointer sm:text-xl dark:bg-zinc-900 dark:text-white/80 backdrop-blur-3xl whitespace-nowrap">
+                                    Collection
+                                </div>
+                            </span>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-auto flex flex-col justify-center">
                     <h3 id="labelConsole" class="mb-3 text-sm text-zinc-500 uppercase font-bold">Enter a regular expression</h3>
