edit height of images on footer

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
         </main>
 
         <footer class="w-full mb-0 bottom-0 flex items-center justify-between gap-5 px-5 py-4 md:p-8 md:py-4 md:px-16">
-            <img src="./img/logo.svg" alt="Convierte lo complejo en sencillo: crea, prueba y aprende todo sobre expresiones regulares de JavaScript en un solo lugar" class="h-8">
+            <img src="./img/logo.svg" alt="Convierte lo complejo en sencillo: crea, prueba y aprende todo sobre expresiones regulares de JavaScript en un solo lugar" class="h-6 md:h-8">
             <div class="flex items-center justify-center gap-3">
-                <img src="./img/isotipo.svg" alt="regex - regular expressions of JavaScript" class="w-8 h-8">
+                <img src="./img/isotipo.svg" alt="regex - regular expressions of JavaScript" class="w-6 h-6 md:w-8 md:h-8">
                 <b id="creator" class="font-mono italic">fw</b>
             </div>
         </footer>
