add languague support for innerHTML on translations content

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="w-full mb-20 grid grid-cols-1 gap-9 sm:grid-cols-2 md:gap-10 lg:gap-12">
                 <div class="col-auto">
                     <h1 id="h1Index"  class="mb-3 md:mb-5 text-5xl font-extrabold capitalize md:text-6xl lg:text-7xl 2xl:text-8xl">Simplified Regular Expressions</h1>
-                    <h2 id="h2Description" class="text-lg font-semibold text-slate-900 md:text-xl 2xl:text-3xl dark:text-zinc-300">Create, learn and test JavaScript regular expressions faster and simpler</h2>
+                    <h2 id="h2Description" class="text-lg font-semibold text-slate-900 md:text-xl 2xl:text-3xl dark:text-zinc-300">Create, learn and test <strong class="text-primary-800 font-extrabold dark:text-primary-600">JavaScript</strong> regular expressions faster and simpler</h2>
                     <div class="mt-5 flex flex-wrap items-center justify-start gap-3">
                         <a href="#" class="flex items-center order-1 md:order-2">
                             <span class="relative inline-flex overflow-hidden rounded-full p-[1px]">
@@ -127,12 +127,11 @@
             <img src="./img/logo.svg" alt="Convierte lo complejo en sencillo: crea, prueba y aprende todo sobre expresiones regulares de JavaScript en un solo lugar" class="h-6 md:h-8">
             <div class="flex items-center justify-center gap-3">
                 <img src="./img/isotipo.svg" alt="regex - regular expressions of JavaScript" class="w-6 h-6 md:w-8 md:h-8">
-                <b id="creator" class="font-mono italic">fw</b>
+                <p id="creator" class="mb-0 font-mono italic">fw</p>
             </div>
         </footer>
     </div>
 
-    <script src="./js/lang.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
