edit title of page and z-index of header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Turn complex into simple: create, test and learn all about JavaScript regular expressions in one place">
     <meta property="og:image" content="./img/preview.png">
     <meta property="og:url" content="https://code-fw.github.io/regex/">
-    <title id="title">Regular Expressions - Regex</title>
+    <title id="title">Regex - JavaScript regular expressions: create, test & learn</title>
     <link rel="canonical" href="https://code-fw.github.io/regex/">
     <link rel="shortcut icon" href="./img/isotipo.svg" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
@@ -46,7 +46,7 @@
 </head>
 <body class="relative h-full w-full bg-white text-slate-950 dark:bg-zinc-950 dark:text-white">
     <div class="min-h-screen max-h-fit absolute bottom-0 left-0 right-0 top-0 bg-[linear-gradient(to_right,#4f4f4f2e_1px,transparent_1px),linear-gradient(to_bottom,#4f4f4f2e_1px,transparent_1px)] bg-[size:14px_24px] [mask-image:radial-gradient(ellipse_80%_50%_at_50%_0%,#000_70%,transparent_300%)]">
-        <header class="w-full fixed top-0 flex items-center justify-between p-5 py-6 md:p-8 md:px-16">
+        <header class="w-full fixed top-0 z-50 flex items-center justify-between p-5 py-6 md:p-8 md:px-16">
             <a href="./index.html" class="w-fit h-fit"><img class="min-w-20 w-24 md:w-28" src="./img/logo-gray.svg" alt="Logo de Regex, herramienta para crear expresiones regulares de Java Script"></a>
             <div class="flex items-center justify-center gap-3 sm:gap-4 md:gap-5 2xl:gap-6">
                 <button type="button" id="btnTheme" class="w-fit bg-inherit transition duration-200 text-gray-600 hover:text-zinc-950 dark:text-gray-400 dark:hover:text-white">
