add collection of regex

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h1 id="h1Index"  class="mb-3 md:mb-5 text-5xl font-extrabold capitalize md:text-6xl lg:text-7xl 2xl:text-8xl">Simplified Regular Expressions</h1>
                     <h2 id="h2Description" class="text-lg font-semibold text-slate-900 md:text-xl 2xl:text-3xl dark:text-zinc-300">Create, learn and test <strong class="text-primary-800 font-extrabold dark:text-primary-600">JavaScript</strong> regular expressions faster and simpler</h2>
                     <div class="mt-5 flex flex-wrap items-center justify-start gap-3">
-                        <a href="#" class="flex items-center order-1 md:order-2">
+                        <a href="#collection" class="flex items-center order-1 md:order-2">
                             <span class="relative inline-flex overflow-hidden rounded-full p-[1px]">
                                 <span class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] bg-[conic-gradient(from_90deg_at_50%_50%,transparent_0%,#020617_50%,transparent_100%)] dark:bg-[conic-gradient(from_90deg_at_50%_50%,transparent_0%,#ccc_50%,transparent_100%)]"></span>
                                 <div id="linkToCollection" class="inline-flex items-center justify-center w-full px-4 py-2 text-lg text-black font-medium bg-zinc-100 rounded-full cursor-pointer sm:text-xl dark:bg-zinc-900 dark:text-white/80 backdrop-blur-3xl whitespace-nowrap">
@@ -121,6 +121,32 @@
                     <p id="messageTest" class="mb-0 mt-3 opacity-0 font-medium text-sm text-red-500">Invalid regular expression</p>
                 </div>
             </div>
+
+            <h2 id="whatTitle" class="mb-4 md:mb-5 lg:mb-6 text-2xl font-semibold text-gray-950 md:text-3xl lg:text-4xl 2xl:text-5xl dark:text-zinc-200">What are regular expressions?</h2>
+            <div class="mb-8 md:mb-12 lg:mb-16 grid grid-cols-1 md:grid-cols-4 gap-4">
+                <div id="definition" class="col-auto flex items-center p-3 md:p-5 rounded-xl border border-zinc-200 bg-zinc-200/50 dark:border-zinc-800 dark:bg-zinc-800/50">
+                    Are patterns used to match combinations of characters in strings.
+                </div>
+                <div class="col-auto flex items-center justify-start gap-4 lg:gap-6 md:col-span-2 p-3 md:p-5 rounded-xl border border-zinc-200 bg-zinc-200/50 dark:border-zinc-800 dark:bg-zinc-800/50">
+                    <img src="./img/isotipo.svg" loading="lazy" alt="Regex - isotipo | Regular expressions">
+                    <p id="bento2" class="mb-0">In JavaScript they are interpreted as objects. Which allows us to use these patterns with different methods.</p>
+                </div>
+                <img class="col-auto hidden md:flex sm:p-0 row-span-2 rounded-xl" loading="lazy" src="./img/javascript.svg" alt="">
+                <div class="col-auto flex flex-col justify-center md:col-span-2 p-3 md:p-5 rounded-xl border border-zinc-200 bg-zinc-200/50 dark:border-zinc-800 dark:bg-zinc-800/50">
+                    <p id="bento3Uno" class="mb-3">They can commonly be seen like this:</p>
+                    <div class="mb-5"><code class="text-gray-900 p-1 px-2 rounded bg-zinc-300 dark:text-zinc-300 dark:bg-gray-800">/^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/</code></div>
+                    <p id="bento3Dos">Does the syntax seem somewhat complex to you? Don't worry.</p>
+                </div>
+                <div class="col-auto flex flex-col items-start justify-center gap-4 p-3 md:p-5 rounded-xl border border-zinc-200 bg-zinc-200/50 dark:border-zinc-800 dark:bg-zinc-800/50">
+                    <img src="./img/logo.svg" loading="lazy" alt="Regex - logo | Regular expressions" class="w-32">
+                    <strong id="bento4" class="font-normal">shows you everything you need to know about JavaScript regular expressions.</strong>
+                </div>
+            </div>
+
+            <h2 id="collection" class="mb-4 md:mb-5 lg:mb-6 text-2xl font-semibold text-gray-950 md:text-3xl lg:text-4xl 2xl:text-5xl dark:text-zinc-200">Regular expression collection</h2>
+            <div id="gridCollection" class="mb-8 md:mb-12 lg:mb-16 grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 gap-4 lg:gap-5"></div>
+
+            <br><br><br><br><br><br><br><br><br><br>
         </main>
 
         <footer class="w-full mb-0 bottom-0 flex items-center justify-between gap-5 px-5 py-4 md:p-8 md:py-4 md:px-16">
