--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Turn complex into simple: create, test and learn all about JavaScript regular expressions in one place" id="description">
-    <meta property="og:type" content="website, app, online">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="Regex - Create and test regular expressions">
     <meta property="og:description" content="Turn complex into simple: create, test and learn all about JavaScript regular expressions in one place">
-    <meta property="og:image" content="./img/preview.png">
+    <meta property="og:image" content="./img/miniature.png">
     <meta property="og:url" content="https://code-fw.github.io/regex/">
     <title id="title">Regex - JavaScript regular expressions: create, test & learn</title>
     <link rel="canonical" href="https://code-fw.github.io/regex/">
