edit columns bento grid

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
 
             <h2 id="whatTitle" class="mb-4 md:mb-5 lg:mb-6 text-2xl font-semibold text-gray-950 md:text-3xl lg:text-4xl 2xl:text-5xl dark:text-zinc-200">What are regular expressions?</h2>
-            <div class="mb-8 md:mb-12 lg:mb-16 grid grid-cols-1 md:grid-cols-4 gap-4">
+            <div class="mb-8 md:mb-12 lg:mb-16 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
                 <div id="definition" class="col-auto flex items-center p-3 md:p-5 rounded-xl border border-zinc-200 bg-zinc-200/50 dark:border-zinc-800 dark:bg-zinc-800/50">
                     Are patterns used to match combinations of characters in strings.
                 </div>
