edit and add meta tags twitter and og

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Regex - Create and test regular expressions">
     <meta property="og:description" content="Turn complex into simple: create, test and learn all about JavaScript regular expressions in one place">
-    <meta property="og:image" content="./img/miniature.png">
+    <meta property="og:image" content="https://code-fw.github.io/regex/img/miniature.png">
     <meta property="og:url" content="https://code-fw.github.io/regex/">
+    <meta property="twitter:type" content="website">
+    <meta property="twitter:title" content="Regex - Create and test regular expressions">
+    <meta property="twitter:description" content="Turn complex into simple: create, test and learn all about JavaScript regular expressions in one place">
+    <meta property="twitter:image" content="https://code-fw.github.io/regex/img/miniature.png">
+    <meta property="twitter:url" content="https://code-fw.github.io/regex/">
     <title id="title">Regex - JavaScript regular expressions: create, test & learn</title>
     <link rel="canonical" href="https://code-fw.github.io/regex/">
     <link rel="shortcut icon" href="./img/isotipo.svg" type="image/x-icon">
