update username on github

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Regex - Create and test regular expressions">
     <meta property="og:description" content="Turn complex into simple: create, test and learn all about JavaScript regular expressions in one place">
-    <meta property="og:image" content="https://code-fw.github.io/regex/img/miniature.png">
-    <meta property="og:url" content="https://code-fw.github.io/regex/">
+    <meta property="og:image" content="https://p-fw.github.io/regex/img/miniature.png">
+    <meta property="og:url" content="https://p-fw.github.io/regex/">
     <meta property="twitter:type" content="website">
     <meta property="twitter:title" content="Regex - Create and test regular expressions">
     <meta property="twitter:description" content="Turn complex into simple: create, test and learn all about JavaScript regular expressions in one place">
-    <meta property="twitter:image" content="https://code-fw.github.io/regex/img/miniature.png">
-    <meta property="twitter:url" content="https://code-fw.github.io/regex/">
+    <meta property="twitter:image" content="https://p-fw.github.io/regex/img/miniature.png">
+    <meta property="twitter:url" content="https://p-fw.github.io/regex/">
     <title id="title">Regex - JavaScript regular expressions: create, test & learn</title>
-    <link rel="canonical" href="https://code-fw.github.io/regex/">
+    <link rel="canonical" href="https://p-fw.github.io/regex/">
     <link rel="shortcut icon" href="./img/isotipo.svg" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -73,7 +73,7 @@
                     <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.8"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-github"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" /></svg>
                 </a>
 
-                <a href="#" class="flex items-center">
+                <a href="#docs" class="flex items-center">
                     <span class="relative inline-flex overflow-hidden rounded-full p-[1px]">
                         <span class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] bg-[conic-gradient(from_90deg_at_50%_50%,transparent_0%,#fade2c_50%,transparent_100%)]"></span>
                         <div class="inline-flex items-center justify-center w-full px-3 py-1 text-sm text-amber-950 bg-amber-50 rounded-full cursor-pointer dark:bg-zinc-900 dark:text-white/80 backdrop-blur-3xl whitespace-nowrap">
@@ -150,6 +150,9 @@
 
             <h2 id="collection" class="mb-4 md:mb-5 lg:mb-6 text-2xl font-semibold text-gray-950 md:text-3xl lg:text-4xl 2xl:text-5xl dark:text-zinc-200">Regular expression collection</h2>
             <div id="gridCollection" class="mb-8 md:mb-12 lg:mb-16 grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 gap-4 lg:gap-5"></div>
+
+            <h2 id="docs" class="mb-4 md:mb-5 lg:mb-6 text-2xl font-semibold text-gray-950 md:text-3xl lg:text-4xl 2xl:text-5xl dark:text-zinc-200">Documentation</h2>
+            
 
             <br><br><br><br><br><br><br><br><br><br>
         </main>
